--- a/coa.htm
+++ b/coa.htm
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head><title> Computer Organization & Architecture</title>
+<head><title> Neural Network and Applications (CC3402) </title>
 	<style>
 	body {background-color: powderblue;}
         h1   {color: blue;}
@@ -10,12 +10,12 @@
 	</head>
 		
 <body>
-<center><h1> Computer Organization & Architecture</h1></center>
+<center><h1>Neural Network and Applications (CC3402)</h1></center>
 <hr>
 
 <h3>Instructor Details: </h3> 
-Name: Dhruba Jyoti Kalita <br>
-Email: dhruba.nitjsr18@gmail.com
+Name:Dr. Dhruba Jyoti Kalita <br>
+Email: dhrubajyoti.kalita@lnmiit.ac.in
 
 <hr>
 
